# switcheroo

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
assets/: artemgus.icns
src/: app.rs  macos.rs  main.rs  ui.rs  windows.rs
