[package]
name = "switcheroo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
block2 = "0.6.2"
eframe = "0.33.3"
egui = "0.33.3"
global-hotkey = "0.7.0"
half = "2.7.1"
nucleo-matcher = "0.3"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-application-services = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-foundation = "0.3.2"
objc2-screen-capture-kit = "0.3.2"
raw-window-handle = "0.6.2"
window-vibrancy = "0.7.1"
